--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
     "@clr/angular": "^12.4.2",
+    "@clr/icons": "^13.0.2",
     "@clr/ui": "^12.0.0",
+    "@webcomponents/custom-elements": "^1.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
